tests/fixtures/positive/untested_public_api/src/main/kotlin/com/example/UserRepository.kt
package com.example

class UserRepository {
    fun get(id: Long): String = id.toString()
}
