tests/fixtures/negative/metrics/slo-rules/ui/src/main/kotlin/com/example/ui/UiSloInput.kt
package com.example.ui

fun renderHeadline(title: String): String = title.trim()
